# minimal_cuda

./: CMakeLists.txt  README.MD
src/: main.cpp
src/Model/: Model.cpp  Model.hpp
src/Model/Model_GPU/: Model_GPU.cpp  Model_GPU.hpp  kernel.cu  kernel.cuh
